--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     />
     <title>E-Commerce WebApp</title>
   </head>
-  <body>
+  <body class="bg-white">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
